--- a/mod2/css/styles.css
+++ b/mod2/css/styles.css
@@ -11,7 +11,7 @@ p {
 }
 
 .contents{
-  height: 200px;
+  height: auto;
   padding-right: 10px;
   padding-left: 10px;
   color: white;
@@ -24,9 +24,8 @@ p {
 
 .container{
 	background-color: grey;
-	margin-right: 20px;
-	margin-left: 20px;
-	margin-bottom: 20px;
+  margin: 15px;
+	margin-bottom: 15px;
 	border: 1px solid black;
 }
 
